# General-Deriver

./: .gitignore  CMakeLists.txt  CMakePresets.json  Grammar.md  README.md  utility.sh
.github/workflows/: test_code.yml
src/: CMakeLists.txt  Main.cpp
src/Backend/: AnalysisTypes.cpp  AstValidator.cpp  CMakeLists.txt  FuncEmitter.cpp
src/Foo/: CMakeLists.txt  Foo.cpp
src/Frontend/: CMakeLists.txt  Lexer.cpp  Parser.cpp  Token.cpp
src/Models/: CMakeLists.txt  Composite.cpp  Polynomial.cpp
src/Syntax/: AstNodes.cpp  CMakeLists.txt
src/Tests/: CMakeLists.txt  TestEmitter.cpp  TestLexer.cpp  TestParser.cpp  TestPolynomial.cpp  TestValidator.cpp
src/Utils/: AstPrinter.cpp  CMakeLists.txt
src/include/Backend/: AnalysisTypes.hpp  AstValidator.hpp  FuncEmitter.hpp
src/include/Foo/: Foo.hpp
src/include/Frontend/: Lexer.hpp  Parser.hpp  Token.hpp
src/include/Models/: Composite.hpp  FunctionAny.hpp  IFunction.hpp  Polynomial.hpp
src/include/Syntax/: AstNodes.hpp  IAstNode.hpp  IAstVisitor.hpp
src/include/Utils/: AstPrinter.hpp
